--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,82 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>SKK</title>
+</head>
+
+<body>
+	<header>
+		<div>
+			<img width="300px" src="./assets/pup.jpg" alt="">
+			<h1>Doggo</h1>
+		</div>
+
+		<section>
+			<h2>About me</h2>
+
+			<p>
+				Voluptate exercitation ea occaecat qui proident ex. Ex sunt laboris qui. Aliquip enim tempor officia ipsum sit
+				cupidatat cupidatat labore adipisicing sint aute nostrud mollit. Eiusmod elit excepteur ad velit minim cillum
+				est ad. Fugiat incididunt et ipsum id. Consequat sit nostrud sint aute non est nulla Lorem cupidatat elit ea.
+				Velit excepteur ea enim aliqua duis voluptate elit sit. Exercitation qui proident sit veniam cupidatat voluptate
+				exercitation.
+			</p>
+
+			<nav>
+				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
+				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" />
+				<img width="25px"
+					src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg" />
+			</nav>
+		</section>
+
+	</header>
+
+	<div>
+		<h1>My projects</h1>
+		<div></div>
+	</div>
+
+	<footer>
+		<section>
+			<h2>Contact me</h2>
+			<p>Please get in touch if you think our work could be mutually beneficial</p>
+
+			<address>
+				<p>123 rndm street</p>
+				<p>randm town, arrakis lmao</p>
+			</address>
+
+			<svg width="20px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+				<title>phone-outline</title>
+				<path
+					d="M20,15.5C18.8,15.5 17.5,15.3 16.4,14.9C16.3,14.9 16.2,14.9 16.1,14.9C15.8,14.9 15.6,15 15.4,15.2L13.2,17.4C10.4,15.9 8,13.6 6.6,10.8L8.8,8.6C9.1,8.3 9.2,7.9 9,7.6C8.7,6.5 8.5,5.2 8.5,4C8.5,3.5 8,3 7.5,3H4C3.5,3 3,3.5 3,4C3,13.4 10.6,21 20,21C20.5,21 21,20.5 21,20V16.5C21,16 20.5,15.5 20,15.5M5,5H6.5C6.6,5.9 6.8,6.8 7,7.6L5.8,8.8C5.4,7.6 5.1,6.3 5,5M19,19C17.7,18.9 16.4,18.6 15.2,18.2L16.4,17C17.2,17.2 18.1,17.4 19,17.4V19Z" />
+			</svg>
+			<p>123-456789</p>
+
+
+			<svg width="20px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+				<title>email-outline</title>
+				<path
+					d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z" />
+			</svg>
+			<p>random@mail.com</p>
+
+			<nav>
+				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
+				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" />
+				<img width="25px"
+					src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg" />
+			</nav>
+
+		</section>
+
+
+
+	</footer>
+</body>
+
 </html>
