--- a/src/index.html
+++ b/src/index.html
@@ -5,17 +5,18 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>SKK</title>
+	<!-- <link rel="stylesheet" href="./output.css"> -->
 </head>
 
 <body>
 	<header>
 		<div>
 			<img width="300px" src="./assets/pup.jpg" alt="">
-			<h1>Doggo</h1>
+			<h1 class="text-green-400">Doggo</h1>
 		</div>
 
 		<section>
-			<h2>About me</h2>
+			<h2 class="font-bold  text-red-500">About me</h2>
 
 			<p>
 				Voluptate exercitation ea occaecat qui proident ex. Ex sunt laboris qui. Aliquip enim tempor officia ipsum sit
