style: adjust header and footer layout

--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,17 @@
 	<title>SKK</title>
 </head>
 
-<body>
+<body class="m-5">
 	<header class="flex flex-row">
 		<div>
-			<img width="300px" src="./assets/pup.jpg" alt="two pups">
-			<h1 class="text-green-400">Doggo</h1>
+			<img class="max-w-md" src="./assets/pup.jpg" alt="two pups">
+			<h1 class="text-5xl font-bold text-white translate-y-[-3rem]">Giorno Giovanna</h1>
 		</div>
 
-		<section>
-			<h2 class="font-bold  text-red-500">About me</h2>
+		<section class="flex flex-col">
+			<h2 class="font-bold  ">About me</h2>
 
-			<p>
+			<p class="max-w-100">
 				Voluptate exercitation ea occaecat qui proident ex. Ex sunt laboris qui. Aliquip enim tempor officia ipsum sit
 				cupidatat cupidatat labore adipisicing sint aute nostrud mollit. Eiusmod elit excepteur ad velit minim cillum
 				est ad. Fugiat incididunt et ipsum id. Consequat sit nostrud sint aute non est nulla Lorem cupidatat elit ea.
@@ -28,8 +28,7 @@
 			<nav class="flex flex-row self-end">
 				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
 				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" />
-				<img width="25px"
-					src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg" />
+				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg" />
 			</nav>
 		</section>
 
@@ -40,7 +39,7 @@
 		<div></div>
 	</div>
 
-	<footer>
+	<footer class="mt-10 flex">
 		<section>
 			<h2 class="text-2xl">Contact me</h2>
 			<p>Please get in touch if you think our work could be mutually beneficial</p>
@@ -78,6 +77,7 @@
 
 		</section>
 
+			<img class="max-w-[300px]" src="./assets/dog.jpg" alt="">
 
 
 	</footer>
