--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body class="m-5">
+	<!-- HEADER SECTION -->
 	<header class="flex flex-row">
 		<div>
 			<img class="max-w-md" src="./assets/pup.jpg" alt="two pups">
@@ -28,17 +29,52 @@
 			<nav class="flex flex-row self-end">
 				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
 				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" />
-				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg" />
 			</nav>
 		</section>
 
 	</header>
 
 	<div>
-		<h1>My projects</h1>
-		<div></div>
+		<h1 class="text-2xl font-bold">My projects</h1>
+		<div class="projects-container flex flex-row gap-5">
+
+
+
+
+
+			<div class="project w-[300px] shadow-md rounded-lg">
+				<a href="https://github.com/SakolkiatNr/small-wins" target="_blank">
+					<img class="object-fill rounded-t-lg" src="./assets/pup.jpg" alt="">
+				</a>
+				<section class="flex flex-col gap-2 p-2">
+					<div class="flex justify-between items-center">
+						<h3 class="text-xl font-medium">Project Name</h3>
+						<div class="flex flex-row">
+							<img class="size-[24px]"
+								src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
+							<svg class="size-[24px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+								<title>open-in-new</title>
+								<path
+									d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
+							</svg>
+						</div>
+					</div>
+					<p>Tempor proident elit ea. Id culpa ullamco exercitation qui </p>
+				</section>
+			</div>
+
+
+
+
+
+
+		</div>
 	</div>
 
+
+
+
+	<!-- FOOTER SECTION -->
 	<footer class="mt-10 flex">
 		<section>
 			<h2 class="text-2xl">Contact me</h2>
@@ -71,13 +107,11 @@
 			<nav class="flex flex-row">
 				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
 				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" />
-				<img width="25px"
-					src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg" />
 			</nav>
 
 		</section>
 
-			<img class="max-w-[300px]" src="./assets/dog.jpg" alt="">
+		<img class="max-w-[300px]" src="./assets/dog.jpg" alt="">
 
 
 	</footer>
