style: add responsive query for mobile

--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,20 @@
 	<title>SKK</title>
 </head>
 
-<body class="m-10 relative overflow-x-hidden ">
-		<!-- <div class="bg-amber-300 w-[100vw] h-100 translate-x-0 absolute -top-50 left-0 -z-1  shadow-lg "></div> -->
+<body class=" relative overflow-x-hidden ">
+	<!-- <div class="bg-amber-300 w-[110vw] h-100 translate-x-0 absolute -top-50 -left-5 -z-1  shadow-lg -rotate-5"></div> -->
+
+
 	<!-- HEADER SECTION -->
-	<header class="flex flex-row my-20 relative justify-center ">
+	<header class="header-section flex flex-row my-20 relative justify-center ">
 		<!-- <div class="bg-amber-300 w-full h-200 scale-120 translate-x-0 absolute -top-130 -left-30  -z-1 -rotate-8 shadow-lg"></div> -->
 
-		<div class="relative self-center">
-			<img class="w-lg scale-110 " src="./assets/pup.jpg" alt="two pups">
-			<h1 class="absolute text-3xl font-bold text-white bottom-5 left-5">Giorno Giovanna</h1>
+		<div class="portrait relative self-center">
+			<img class="photo  " src="./assets/pup.jpg" alt="two pups">
+			<h1 class="name absolute text-3xl font-bold text-white bottom-5 left-5">Giorno Giovanna</h1>
 		</div>
 
-		<section class="p-5 pl-10  flex flex-col gap-3 border-2 justify-center  border-red-500 max-w-[450px] bg-white ">
+		<section class="about-section p-5 bg-white  flex flex-col gap-3  justify-center  max-w-[450px] shadow-md ">
 			<h2 class="font-bold text-4xl ">About me</h2>
 
 			<p class="">
@@ -38,35 +40,15 @@
 
 
 	<div>
-		<h1 class="text-2xl font-bold">My projects</h1>
+		<h1 class="my-project text-2xl font-bold">My projects</h1>
 		<div class="projects-container grid grid-cols-3 gap-10">
 
 			<div class="project  shadow-md rounded-lg">
-				<a href="https://github.com/SakolkiatNr/small-wins" target="_blank">
-					<img class="object-fill rounded-t-lg" src="./assets/pup.jpg" alt="">
-				</a>
-				<section class="flex flex-col gap-2 p-2 h-30">
-					<div class="flex justify-between items-center">
-						<h3 class="text-xl font-medium">Project Name</h3>
-						<div class="flex flex-row">
-							<img class="size-[24px]"
-								src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
-							<svg class="size-[24px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-								<title>open-in-new</title>
-								<path
-									d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
-							</svg>
-						</div>
-					</div>
-					<p>Tempor proident elit ea. Id culpa ullamco exercitation qui </p>
-				</section>
-			</div>
-
-
-			<div class="project  shadow-md rounded-lg">
-				<a href="https://github.com/SakolkiatNr/small-wins" target="_blank">
-					<img class="object-fill rounded-t-lg" src="./assets/pup.jpg" alt="">
-				</a>
+				<div class="img-container h-[200px] bg-amber-600">
+					<a class="" href="https://github.com/SakolkiatNr/small-wins" target="_blank">
+						<!-- <img class="object-fill rounded-t-lg" src="./assets/pup.jpg" alt=""> -->
+					</a>
+				</div>
 				<section class="flex flex-col gap-2 p-2 h-30">
 					<div class="flex justify-between items-center">
 						<h3 class="text-xl font-medium">Project Name</h3>
@@ -85,53 +67,11 @@
 			</div>
 
 			<div class="project  shadow-md rounded-lg">
-				<a href="https://github.com/SakolkiatNr/small-wins" target="_blank">
-					<img class="object-fill rounded-t-lg" src="./assets/pup.jpg" alt="">
-				</a>
-				<section class="flex flex-col gap-2 p-2 h-30">
-					<div class="flex justify-between items-center">
-						<h3 class="text-xl font-medium">Project Name</h3>
-						<div class="flex flex-row">
-							<img class="size-[24px]"
-								src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
-							<svg class="size-[24px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-								<title>open-in-new</title>
-								<path
-									d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
-							</svg>
-						</div>
-					</div>
-					<p>Tempor proident elit ea. Id culpa ullamco exercitation qui </p>
-				</section>
-			</div>
-
-
-			<div class="project  shadow-md rounded-lg">
-				<a href="https://github.com/SakolkiatNr/small-wins" target="_blank">
-					<img class="object-fill rounded-t-lg" src="./assets/pup.jpg" alt="">
-				</a>
-				<section class="flex flex-col gap-2 p-2 h-30">
-					<div class="flex justify-between items-center">
-						<h3 class="text-xl font-medium">Project Name</h3>
-						<div class="flex flex-row">
-							<img class="size-[24px]"
-								src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
-							<svg class="size-[24px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-								<title>open-in-new</title>
-								<path
-									d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
-							</svg>
-						</div>
-					</div>
-					<p>Tempor proident elit ea. Id culpa ullamco exercitation qui </p>
-				</section>
-			</div>
-
-
-			<div class="project  shadow-md rounded-lg">
-				<a href="https://github.com/SakolkiatNr/small-wins" target="_blank">
-					<img class="object-fill rounded-t-lg" src="./assets/pup.jpg" alt="">
-				</a>
+				<div class="img-container h-[200px] bg-amber-600">
+					<a class="" href="https://github.com/SakolkiatNr/small-wins" target="_blank">
+						<!-- <img class="object-fill rounded-t-lg" src="./assets/pup.jpg" alt=""> -->
+					</a>
+				</div>
 				<section class="flex flex-col gap-2 p-2 h-30">
 					<div class="flex justify-between items-center">
 						<h3 class="text-xl font-medium">Project Name</h3>
@@ -150,9 +90,80 @@
 			</div>
 
 			<div class="project  shadow-md rounded-lg">
-				<a href="https://github.com/SakolkiatNr/small-wins" target="_blank">
-					<img class="object-fill rounded-t-lg" src="./assets/pup.jpg" alt="">
-				</a>
+				<div class="img-container h-[200px] bg-amber-600">
+					<a class="" href="https://github.com/SakolkiatNr/small-wins" target="_blank">
+						<!-- <img class="object-fill rounded-t-lg" src="./assets/pup.jpg" alt=""> -->
+					</a>
+				</div>
+				<section class="flex flex-col gap-2 p-2 h-30">
+					<div class="flex justify-between items-center">
+						<h3 class="text-xl font-medium">Project Name</h3>
+						<div class="flex flex-row">
+							<img class="size-[24px]"
+								src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
+							<svg class="size-[24px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+								<title>open-in-new</title>
+								<path
+									d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
+							</svg>
+						</div>
+					</div>
+					<p>Tempor proident elit ea. Id culpa ullamco exercitation qui </p>
+				</section>
+			</div>
+
+			<div class="project  shadow-md rounded-lg">
+				<div class="img-container h-[200px] bg-amber-600">
+					<a class="" href="https://github.com/SakolkiatNr/small-wins" target="_blank">
+						<!-- <img class="object-fill rounded-t-lg" src="./assets/pup.jpg" alt=""> -->
+					</a>
+				</div>
+				<section class="flex flex-col gap-2 p-2 h-30">
+					<div class="flex justify-between items-center">
+						<h3 class="text-xl font-medium">Project Name</h3>
+						<div class="flex flex-row">
+							<img class="size-[24px]"
+								src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
+							<svg class="size-[24px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+								<title>open-in-new</title>
+								<path
+									d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
+							</svg>
+						</div>
+					</div>
+					<p>Tempor proident elit ea. Id culpa ullamco exercitation qui </p>
+				</section>
+			</div>
+
+			<div class="project  shadow-md rounded-lg">
+				<div class="img-container h-[200px] bg-amber-600">
+					<a class="" href="https://github.com/SakolkiatNr/small-wins" target="_blank">
+						<!-- <img class="object-fill rounded-t-lg" src="./assets/pup.jpg" alt=""> -->
+					</a>
+				</div>
+				<section class="flex flex-col gap-2 p-2 h-30">
+					<div class="flex justify-between items-center">
+						<h3 class="text-xl font-medium">Project Name</h3>
+						<div class="flex flex-row">
+							<img class="size-[24px]"
+								src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
+							<svg class="size-[24px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+								<title>open-in-new</title>
+								<path
+									d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
+							</svg>
+						</div>
+					</div>
+					<p>Tempor proident elit ea. Id culpa ullamco exercitation qui </p>
+				</section>
+			</div>
+
+			<div class="project  shadow-md rounded-lg">
+				<div class="img-container h-[200px] bg-amber-600">
+					<a class="" href="https://github.com/SakolkiatNr/small-wins" target="_blank">
+						<!-- <img class="object-fill rounded-t-lg" src="./assets/pup.jpg" alt=""> -->
+					</a>
+				</div>
 				<section class="flex flex-col gap-2 p-2 h-30">
 					<div class="flex justify-between items-center">
 						<h3 class="text-xl font-medium">Project Name</h3>
@@ -175,12 +186,10 @@
 	</div>
 
 
-
-
 	<!-- FOOTER SECTION -->
 	<footer class="mt-30 flex justify-between relative">
-		<div class="bg-amber-300 w-full h-100  absolute top-0  -z-1  shadow-lg "></div>
-		<section>
+		<!-- <div class="bg-amber-300 w-full h-60  absolute top-0  -z-1  shadow-lg "></div> -->
+		<section class="flex flex-col gap-3 p-5">
 			<h2 class="text-2xl">Contact me</h2>
 			<p>Please get in touch if you think our work could be mutually beneficial</p>
 
@@ -189,7 +198,7 @@
 				<p>randm town, arrakis lmao</p>
 			</address>
 
-			<div class="flex">
+			<div class="flex gap-2 ">
 				<svg width="20px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 					<title>phone-outline</title>
 					<path
@@ -198,7 +207,7 @@
 				<p>123-456789</p>
 			</div>
 
-			<div class="flex">
+			<div class="flex gap-2">
 				<svg width="20px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 					<title>email-outline</title>
 					<path
@@ -208,14 +217,14 @@
 
 			</div>
 
-			<nav class="flex flex-row">
+			<nav class="flex flex-row gap-3">
 				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
 				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" />
 			</nav>
 
 		</section>
 
-		<img class="max-w-[300px]" src="./assets/dog.jpg" alt="">
+		<img class="max-w-[500px] mt-5 object-contain  " src="./assets/dog.jpg" alt="">
 
 
 	</footer>
