--- a/src/index.html
+++ b/src/index.html
@@ -8,19 +8,18 @@
 </head>
 
 <body class=" relative overflow-x-hidden ">
-	<!-- <div class="bg-amber-300 w-[110vw] h-100 translate-x-0 absolute -top-50 -left-5 -z-1  shadow-lg -rotate-5"></div> -->
+	<div class="bg-amber-300 w-full h-100  absolute -top-50  -z-1  shadow-lg skew-y-5"></div>
 
 
 	<!-- HEADER SECTION -->
 	<header class="header-section flex flex-row my-20 relative justify-center ">
-		<!-- <div class="bg-amber-300 w-full h-200 scale-120 translate-x-0 absolute -top-130 -left-30  -z-1 -rotate-8 shadow-lg"></div> -->
 
 		<div class="portrait relative self-center">
 			<img class="photo  " src="./assets/pup.jpg" alt="two pups">
 			<h1 class="name absolute text-3xl font-bold text-white bottom-5 left-5">Giorno Giovanna</h1>
 		</div>
 
-			<section class="about-section p-5 bg-white  flex flex-col gap-3  justify-center  max-w-[450px] shadow-md ">
+		<section class="about-section p-5 bg-white  flex flex-col gap-3  justify-center  max-w-[450px] shadow-md ">
 			<h2 class="font-bold text-4xl ">About me</h2>
 
 			<p class="">
@@ -187,44 +186,50 @@
 
 
 	<!-- FOOTER SECTION -->
-	<footer class="mt-30 flex justify-between relative">
-		<!-- <div class="bg-amber-300 w-full h-60  absolute top-0  -z-1  shadow-lg "></div> -->
-		<section class="flex flex-col gap-3 p-5">
-			<h2 class="text-2xl">Contact me</h2>
-			<p>Please get in touch if you think our work could be mutually beneficial</p>
+	<footer class="mt-10 flex justify-between relative">
+		<div class="bg-amber-300 w-full h-full  absolute  -z-1  shadow-lg "></div>
 
-			<address>
-				<p>123 rndm street</p>
-				<p>randm town, arrakis lmao</p>
-			</address>
 
-			<div class="flex gap-2 ">
-				<svg width="20px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-					<title>phone-outline</title>
-					<path
-						d="M20,15.5C18.8,15.5 17.5,15.3 16.4,14.9C16.3,14.9 16.2,14.9 16.1,14.9C15.8,14.9 15.6,15 15.4,15.2L13.2,17.4C10.4,15.9 8,13.6 6.6,10.8L8.8,8.6C9.1,8.3 9.2,7.9 9,7.6C8.7,6.5 8.5,5.2 8.5,4C8.5,3.5 8,3 7.5,3H4C3.5,3 3,3.5 3,4C3,13.4 10.6,21 20,21C20.5,21 21,20.5 21,20V16.5C21,16 20.5,15.5 20,15.5M5,5H6.5C6.6,5.9 6.8,6.8 7,7.6L5.8,8.8C5.4,7.6 5.1,6.3 5,5M19,19C17.7,18.9 16.4,18.6 15.2,18.2L16.4,17C17.2,17.2 18.1,17.4 19,17.4V19Z" />
-				</svg>
-				<p>123-456789</p>
-			</div>
+		<div class="footer-wrapper flex w-full">
+			<section class="flex flex-col gap-3 p-5">
+				<h2 class="text-2xl">Contact me</h2>
+				<p>Please get in touch if you think our work could be mutually beneficial</p>
 
-			<div class="flex gap-2">
-				<svg width="20px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-					<title>email-outline</title>
-					<path
-						d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z" />
-				</svg>
-				<p>random@mail.com</p>
+				<address>
+					<p>123 rndm street</p>
+					<p>randm town, arrakis lmao</p>
+				</address>
 
-			</div>
+				<div class="flex gap-2 ">
+					<svg width="20px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+						<title>phone-outline</title>
+						<path
+							d="M20,15.5C18.8,15.5 17.5,15.3 16.4,14.9C16.3,14.9 16.2,14.9 16.1,14.9C15.8,14.9 15.6,15 15.4,15.2L13.2,17.4C10.4,15.9 8,13.6 6.6,10.8L8.8,8.6C9.1,8.3 9.2,7.9 9,7.6C8.7,6.5 8.5,5.2 8.5,4C8.5,3.5 8,3 7.5,3H4C3.5,3 3,3.5 3,4C3,13.4 10.6,21 20,21C20.5,21 21,20.5 21,20V16.5C21,16 20.5,15.5 20,15.5M5,5H6.5C6.6,5.9 6.8,6.8 7,7.6L5.8,8.8C5.4,7.6 5.1,6.3 5,5M19,19C17.7,18.9 16.4,18.6 15.2,18.2L16.4,17C17.2,17.2 18.1,17.4 19,17.4V19Z" />
+					</svg>
+					<p>123-456789</p>
+				</div>
 
-			<nav class="flex flex-row gap-3">
-				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
-				<img width="25px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" />
-			</nav>
+				<div class="flex gap-2">
+					<svg width="20px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+						<title>email-outline</title>
+						<path
+							d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z" />
+					</svg>
+					<p>random@mail.com</p>
 
-		</section>
+				</div>
 
-		<img class="max-w-[500px] mt-5 object-contain  " src="./assets/dog.jpg" alt="">
+				<nav class="flex flex-row gap-3">
+					<img width="25px"
+						src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
+					<img width="25px"
+						src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" />
+				</nav>
+
+			</section>
+
+			<img class="max-w-[400px] mt-5 object-contain  " src="./assets/dog.jpg" alt="">
+		</div>
 
 
 	</footer>
